make /api/feed args more friendly